Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-140086

Streaming an IP camera over HTTP fails randomly

XMLWordPrintable

    • Windows
    • ce7099f2d (dev), fb99719c5 (6.10)

      Sometimes when trying to start streaming, there is an output:

      qt.multimedia.ffmpeg.mediadataholder: Could not open media. FFmpeg error description: Error number -138 occurred
      

      Sometimes it seems like one frame is sent, then the Qt application disconnects from the server.

      Attached example has stream.py (pip install opencv-python flask) that could be run as a server.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            timblechmann tim blechmann
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change