Playback options: increase default network timeout from 5 to 20s

Oone can easily run into network timeouts when using network stream
sources. The original default of 5s seems to be quite low for the
windows network stack.

Fixes: QTBUG-140086
Change-Id: I1bf028cdb5d7d26548ff622a5dc21fcd5f52aaae
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit ce7099f2d0bc2e426c479bd038f7e46dadb07026)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>